log
Fri 19 Aug 2022 12:23:31 PM UTC: 
 tests:  0|6
total_score: 0/70
80a85de
Fri 19 Aug 2022 12:33:19 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:41: error: expected ‘,’ or ‘;’ before ‘)’ token
   33 |   List* list=(List*)malloc(sizeof(List)));
      |                                         ^
Compilation failed
019b0fa
Fri 19 Aug 2022 12:33:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
334af94
Fri 19 Aug 2022 12:43:58 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:9: error: ‘n’ undeclared (first use in this function)
   42 |   list* n =list->current;
      |         ^
list.c:42:9: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6279c8
Fri 19 Aug 2022 12:44:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:3: error: statement with no effect [-Werror=unused-value]
   42 |   list n =list->current;
      |   ^~~~
list.c:42:7: error: expected ‘;’ before ‘n’
   42 |   list n =list->current;
      |       ^~
      |       ;
list.c:43:3: error: ‘n’ undeclared (first use in this function)
   43 |   n = list->head;
      |   ^
list.c:43:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fba0926
Fri 19 Aug 2022 12:46:28 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
8205195
Fri 19 Aug 2022 12:53:04 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:16: error: statement with no effect [-Werror=unused-value]
   42 |   list->current->data;
      |   ~~~~~~~~~~~~~^~~~~~
list.c: In function ‘pushFront’:
list.c:61:18: error: implicit declaration of function ‘createnode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   61 |   Node *newnode= createnode(data);
      |                  ^~~~~~~~~~
      |                  createNode
list.c:61:18: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
list.c:61:9: error: unused variable ‘newnode’ [-Werror=unused-variable]
   61 |   Node *newnode= createnode(data);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
85d75b5
Fri 19 Aug 2022 12:53:41 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:18: error: statement with no effect [-Werror=unused-value]
   42 |     list->current->data;
      |     ~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
16d0637
Fri 19 Aug 2022 12:53:45 PM UTC: 
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:18: error: statement with no effect [-Werror=unused-value]
   42 |     list->current->data;
      |     ~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e91093
Fri 19 Aug 2022 12:54:02 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
d9a40b7
